create handlers and connect the handlers to main function(ServAndListen method)

--- a/configs/.env
+++ b/configs/.env
@@ -1,7 +1,10 @@
 # App Config
 APP_SERVER=localhost
-APP_PORT=80
+APP_PORT=8080
 
 # Redis Config
 REDIS_PORT=6379
 REDIS_SERVER=localhost
+
+# Docker Config
+DOCKER_COMPOSE_LOCATION=./config/docker-compose.yaml
