create the beginning logic of the blockchain(create the AddBlock method)

--- a/configs/.env
+++ b/configs/.env
@@ -7,4 +7,4 @@ REDIS_PORT=6379
 REDIS_SERVER=localhost
 
 # Docker Config
-DOCKER_COMPOSE_LOCATION=./config/docker-compose.yaml
+DOCKER_COMPOSE_LOCATION=./config/docker-compose.yml
